--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,8 +16,8 @@
 
 }
 .main-header{
-    width: 100%;
-    height:90vh;
+    width: 1500px;
+    height:600px;
     background-image:url(../img/Frostwake_Hills.png);
     background-color: blue;
     background-blend-mode: multiply;
@@ -107,7 +107,7 @@ nav ul li a{
     border-radius: 3px;
     margin-top: 10px;
     display: inline-block;
-    font-weight: 400;
+    font-weight: 700;
     font-size: 12px;
 }
 .underline{
@@ -148,13 +148,14 @@ nav ul li a{
     z-index: 5;
 }
 .img-box{
-    position: absolute;
+    /*position: absolute;
     top: 120px;
-    right: 0;
+    right: 0;*/
 
     width: 200px;
-    height: 40vh;
-    margin-right: 5px;
+    height: 260px;
+    margin-left: 120px;
+    margin-top: -60px;
 
 
 }
@@ -167,7 +168,7 @@ nav ul li a{
 
 }
 .about-section{
-    width: 100%;
+    width: 1500px;
     height: 450px;
     margin-top: 50px;
 }
@@ -286,6 +287,7 @@ nav ul li a{
 
 
 .footer-section{
+    width: 1500px;
     padding-top: 50px;
     height: 400px;
     background-color: blue;
@@ -382,6 +384,7 @@ nav ul li a{
     font-size: 15px;
 }
 .main-footer{
+    width: 1500px;
     height: 100px;
 
 }
