--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,8 @@
 
 }
 .main-header{
-    width: 1500px;
+    width:100%;
+    max-width:1500px;
     height:600px;
     background-image:url(../img/Frostwake_Hills.png);
     background-color: blue;
@@ -168,7 +169,8 @@ nav ul li a{
 
 }
 .about-section{
-    width: 1500px;
+    width:100%;
+    max-width:1500px;
     height: 450px;
     margin-top: 50px;
 }
@@ -287,7 +289,8 @@ nav ul li a{
 
 
 .footer-section{
-    width: 1500px;
+    width:100%;
+    max-width:1500px;
     padding-top: 50px;
     height: 400px;
     background-color: blue;
@@ -384,7 +387,8 @@ nav ul li a{
     font-size: 15px;
 }
 .main-footer{
-    width: 1500px;
+    width:100%;
+    max-width:1500px;
     height: 100px;
 
 }
