--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,8 @@
 
 }
 .container{
-    width:700px;
+    width:100%;
+    max-width: 700px;
     margin-left: auto;
     margin-right: auto;
 
@@ -17,7 +18,7 @@
 }
 .main-header{
     width:100%;
-    max-width:1500px;
+    /*max-width:1500px;*/
     height:600px;
     background-image:url(../img/Frostwake_Hills.png);
     background-color: blue;
@@ -170,7 +171,7 @@ nav ul li a{
 }
 .about-section{
     width:100%;
-    max-width:1500px;
+    /*max-width:1500px;*/
     height: 450px;
     margin-top: 50px;
 }
@@ -290,7 +291,7 @@ nav ul li a{
 
 .footer-section{
     width:100%;
-    max-width:1500px;
+    /*max-width:1500px;*/
     padding-top: 50px;
     height: 400px;
     background-color: blue;
@@ -388,7 +389,7 @@ nav ul li a{
 }
 .main-footer{
     width:100%;
-    max-width:1500px;
+    /*max-width:1500px;*/
     height: 100px;
 
 }
